k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
#   I have used nodePort for my minikube testing but one can use Cluster IP
#   or LoadBalancer according to the requirements.
